syntax.bnf
# 全体
all ::= (while_stmt | if_stmt | declare_stmt | assign_stmt) ";" all | ;

# 繰り返し
while_stmt ::= "while" boolean_expr "{" all "}";

# 条件分岐
if_stmt ::= "if" boolean_expr "{" all "}" (else_stmt | );
else_stmt ::= "else" ("{" all "}" | if_stmt);

# 変数
declare_stmt ::= "let" ("num" | "bool") id;
assign_stmt ::= id "=" ( boolean_expr | num_expr );
id ::= [a-zA-Z_][a-zA-Z0-9_]*;

# 論理式

boolean_expr ::= boolean (boolean_calc | ) | num_comp | boolean_not; # LL(1)を満たさない

boolean_not ::= "not" boolean_expr;

boolean_calc ::= ("and" | "or") boolean_expr;

boolean ::= "true" | "false" | "(" boolean_expr ")" | id;

num_comp ::= num_expr num_comp_op num_expr ;
num_comp_op ::= "==" | "!=" | "<" | "<=" | ">" | ">=";


# 数式
num_expr ::= term num_expr_ ;
num_expr_ ::=  "+" term num_expr_ | "-" term num_expr_ | ;

term ::= num term_ ;
term_ ::= ("*" | "/") num term_ | ;

num ::= "(" num_expr ")" | "-" num_ | num_ | id;

# numの正規表現
num_ ::= ([0-9]+)(.[0-9]+)?;
